--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
     "name": "convert-cart/wordpress-analytics",
     "description": "Convert Cart Analytics plugin for frontend tracking and backend synchronization.",
     "type": "wordpress-plugin",
-    "license": "GPL-3.0",
+    "version": "1.2.3",
+    "license": [
+      "OSL-3.0",
+      "AFL-3.0"
+    ],
     "homepage": "https://www.convertcart.com/",
     "scripts": {
         "lint": "./vendor/bin/phpcs ./"
