--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 vendor/
 composer.lock
 .php-cs-fixer.cache
+
+# Node dependencies
+node_modules/
+
+# Build artifacts
+assets/build/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+debug.log
+
+# Editor files
+.idea/
+.vscode/
